fix list creation bugs