@@ -27,6 +27,7 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
+import java.util.stream.Collectors;
 
 import static org.telegram.bot.utils.TextUtils.containsStartWith;
 import static org.telegram.bot.utils.TextUtils.getStartsWith;
@@ -143,7 +144,7 @@ public class AliasSetter implements Setter<BotResponse> {
                 new KeyboardButton()
                         .setName(Emoji.DELETE.getSymbol() + alias.getName() + " — " + alias.getValue())
                         .setCallback(CALLBACK_DELETE_ALIAS_COMMAND + " " + alias.getId()))
-        ).toList();
+        ).collect(Collectors.toList());
 
         addingMainRows(rows, CALLBACK_DELETE_ALIAS_COMMAND, page, aliasList.getTotalPages());
 
@@ -337,7 +338,7 @@ public class AliasSetter implements Setter<BotResponse> {
                             .setName(buttonText)
                             .setCallback(CALLBACK_SELECT_ALIAS_COMMAND + " " + alias.getId()));
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         addingMainRows(rows, CALLBACK_SELECT_ALIAS_COMMAND, page, chatAliasList.getTotalPages());
 
